--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "kc-serve --theme black --highlight darkula -o"
+    "start": "concurrently \"kc-serve --theme black --highlight darkula -o\" \"http-server -p 4901\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@infosupport/kc-serve": "^2.1.3"
+    "@infosupport/kc-serve": "^2.1.3",
+    "concurrently": "^3.5.1",
+    "http-server": "^0.11.1"
   }
 }
